--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,3 +1,19 @@
-<h2>Edit Post</h2>
+</h1>Edit post</h1>
+<%= form_for :post, url: post_path(@post), method: :patch do |f| %>
 
-<%= render "posts/form" %>
+	<p>
+		<%= f.label :title %>
+		<%= f.text_field(:title, {:class => 'form-control'}) %>
+	</p>
+
+	<p>
+		<%= f.label :text %><br>
+		<%= f.text_area(:body, {:class => 'form-control'}) %>
+	</p>
+
+	<p>
+		<%= f.submit({:class => 'btn btn-primary'}) %>
+	</p>
+<% end %>
+
+
