--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,3 +1,18 @@
-<h2>Create New Post</h2>
+</h1>Add post</h1>
+<%= form_for @post do |f| %>
+	<p>
+		<%= f.label :title %>
+		<%= f.text_field(:title, {:class => 'form-control'}) %>
+	</p>
 
-<%= render "posts/form" %>
+	<p>
+		<%= f.label :text %><br>
+		<%= f.text_area(:body, {:class => 'form-control'}) %>
+	</p>
+
+	<p>
+		<%= f.submit({:class => 'btn btn-primary'}) %>
+	</p>
+<% end %>
+
+
